cb_Core to UTF-8